<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent" android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contact_page_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:paddingBottom="12dp"
        android:layout_margin="12dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="12dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_email_header"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_email"
            android:autoLink="email"
            android:textSize="18sp"
            android:textColor="@color/colorClickableText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_twitter_header"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/twitter_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_twitter"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"/>

    </LinearLayout>

</LinearLayout>